<resources>
    <string name="app_name">Stores</string>
    <string name="description_img_photo">Imagen de la tienda</string>
    <string name="description_store_add">Crear Tienda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Nombre de la tienda</string>
    <string name="helper_required">Campo requerido</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_website">URL del sitio web</string>
    <string name="hint_photo_url">URL de la imagen</string>
    <string name="edit_store_title_add">Crear tienda</string>
    <string name="menu_save">Save</string>
    <string name="arg_id">key_id</string>
    <string name="dialog_delete_title">Eliminar tienda?</string>
    <string name="dialog_positive_button">Eliminar</string>
    <string name="dialog_negative_button">Cacelar</string>
    <string name="dialog_options_title">Que quieres hacer?</string>
    <string name="main_error_no_website">La tienda no tiene sitio web</string>
    <string name="main_error_no_resolve">No se encontro una aplicaion disponible</string>
    <string name="main_array_options_item_delete">Eliminar</string>
    <string name="main_array_options_item_call">Lllamar</string>
    <string name="main_array_options_item_goWebsite">Ir ak sitio web</string>
    <string name="main_error_get">Error al consultar datos</string>
    <string name="main_error_insert">\"Error al insertar \"</string>
    <string name="main_error_update">Error al actualizar</string>
    <string name="main_error_delete">Error al eliminar</string>
    <string name="main_error_unknow">Error desconocido</string>
</resources>