<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".editModule.EditStoreFragment">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="@dimen/common_padding_default">

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/tilName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_name"
          app:helperText="@string/helper_required"
          app:endIconMode="clear_text"
          app:counterMaxLength="@integer/counter_max_name"
          app:counterEnabled="true"
          app:startIconDrawable="@drawable/ic_store"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
      <com.google.android.material.textfield.TextInputEditText
          android:maxLength="@integer/counter_max_name"
          android:inputType="textCapWords"
          android:id="@+id/etName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      </com.google.android.material.textfield.TextInputLayout>



      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/tilPhone"
          android:layout_marginTop="@dimen/common_padding_default"
          app:counterMaxLength="@integer/counter_max_phone"
          app:counterEnabled="true"
          android:hint="@string/hint_phone"
          app:endIconMode="clear_text"
          app:helperText="@string/helper_required"
          android:layout_width="match_parent"
          app:startIconDrawable="@drawable/ic_phone"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_height="wrap_content">
          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/etPhone"
              android:inputType="phone"
              android:maxLength="@integer/counter_max_phone"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>
      </com.google.android.material.textfield.TextInputLayout>


      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/tilWebsite"
          android:layout_marginTop="@dimen/common_padding_default"
          android:hint="@string/hint_website"
          android:layout_width="match_parent"
          app:endIconMode="clear_text"
          app:startIconDrawable="@drawable/ic_link"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_height="wrap_content">
          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/etWebsite"
              android:maxLines="@integer/lines_url_website"
              android:minLines="@integer/lines_url_website"
              android:layout_width="match_parent"
              android:textAppearance="?attr/textAppearanceCaption"
              android:inputType="textMultiLine"
              android:textColor="@color/color_link"
              android:layout_height="wrap_content"/>
      </com.google.android.material.textfield.TextInputLayout>

      <LinearLayout
          android:orientation="horizontal"
          android:gravity="center_vertical"
          android:layout_marginTop="@dimen/common_padding_default"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/tilPhotoUrl"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
              android:hint="@string/hint_photo_url"
              app:endIconMode="clear_text"
              app:startIconDrawable="@drawable/ic_link"
              android:layout_weight="1">
              <com.google.android.material.textfield.TextInputEditText
                  android:id="@+id/etPhotoUrl"
                  android:textAppearance="?attr/textAppearanceCaption"
                  android:textColor="@color/color_link"

                  android:minLines="@integer/lines_url_photo"
                  android:maxLines="@integer/lines_url_photo"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>

          </com.google.android.material.textfield.TextInputLayout>
          
          <ImageView
              android:id="@+id/imgPhoto"
              android:layout_marginStart="@dimen/common_padding_default"
              android:contentDescription="@string/description_img_photo"
              android:layout_width="@dimen/photo_size_thumb"
              android:layout_height="@dimen/photo_size_thumb"
              android:src="@drawable/ic_image"/>

      </LinearLayout>


  </LinearLayout>

</androidx.core.widget.NestedScrollView>